--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
   "name": "tasks",
   "version": "0.0.1",
-  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "start": "http-server -p 3000 .",
+    "build": "NODE_ENV=production webpack -p",
+    "watch": "webpack-dev-server --hot --progress --colors"
+  },
   "devDependencies": {
-    "cheerio": "^0.18.0",
-    "express": "^4.10.7",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-shell": "^1.1.1",
-    "grunt-svgstore": "^0.5.0",
-    "gulp-webserver": "^0.9.0"
+    "css-loader": "^0.21.0",
+    "http-server": "^0.8.0",
+    "jsx-loader": "^0.13.2",
+    "node-libs-browser": "^0.5.0",
+    "node-sass": "^3.3.3",
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.0.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.9.5",
+    "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "react-sortable": "0.0.2"
+    "babel-core": "^5.3.3",
+    "babel-loader": "^5.0.0"
   }
 }
