--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "moment": "^2.10.6",
     "node-libs-browser": "^0.5.0",
     "node-sass": "^3.3.3",
+    "react": "^0.14.3",
     "react-hot-loader": "^1.3.0",
+    "react-router": "latest",
+    "reflux": "latest",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.9.5",
