--- a/package.json
+++ b/package.json
@@ -8,22 +8,24 @@
     "watch": "webpack-dev-server --hot --progress --colors"
   },
   "devDependencies": {
+    "babel-core": "^5.3.3",
+    "babel-loader": "^5.0.0",
     "css-loader": "^0.21.0",
+    "express": "^4.13.3",
+    "history": "^1.13.1",
     "jsx-loader": "^0.13.2",
     "moment": "^2.10.6",
     "node-libs-browser": "^0.5.0",
     "node-sass": "^3.3.3",
     "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "react-router": "latest",
     "reflux": "latest",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.9.5",
-    "webpack-dev-server": "^1.12.1",
-    "babel-core": "^5.3.3",
-    "babel-loader": "^5.0.0"
+    "webpack-dev-server": "^1.12.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
