--- a/package.json
+++ b/package.json
@@ -27,5 +27,7 @@
     "webpack": "^1.9.5",
     "webpack-dev-server": "^1.12.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "redux": "^3.3.1"
+  }
 }
