--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.3",
     "history": "^1.13.1",
     "jsx-loader": "^0.13.2",
+    "material-ui": "^0.14.4",
     "moment": "^2.10.6",
     "node-libs-browser": "^0.5.0",
     "node-sass": "^3.3.3",
@@ -21,6 +22,7 @@
     "react-dom": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "react-router": "latest",
+    "react-tap-event-plugin": "^0.2.2",
     "reflux": "latest",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
