--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-hot-loader": "^1.3.0",
     "react-router": "latest",
     "react-tap-event-plugin": "^0.2.2",
-    "reflux": "latest",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.9.5",
@@ -32,6 +31,8 @@
   "dependencies": {
     "axios": "^0.9.1",
     "lodash": "^4.6.1",
-    "redux": "^3.3.1"
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1"
   }
 }
