--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.6.1",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "revalidator": "^0.3.1"
   }
 }
