--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^2.1.2",
     "react-redux": "^4.4.0",
+    "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
+    "redux-auth-wrapper": "^0.3.0",
     "redux-thunk": "^2.0.1",
     "revalidator": "^0.3.1"
   }
