--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "axios": "^0.9.1",
+    "js-cookie": "^2.1.1",
     "lodash": "^4.6.1",
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^2.1.2",
