--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "moment": "^2.10.6",
     "node-libs-browser": "^0.5.0",
     "node-sass": "^3.3.3",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "react": "latest",
+    "react-dom": "latest",
     "react-hot-loader": "^1.3.0",
     "react-router": "latest",
     "react-tap-event-plugin": "^0.2.2",
