--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "webpack-dev-server --hot --progress --colors"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.7",
     "babel-core": "^5.3.3",
     "babel-loader": "^5.0.0",
     "css-loader": "^0.21.0",
@@ -18,6 +19,9 @@
     "moment": "^2.10.6",
     "node-libs-browser": "^0.5.0",
     "node-sass": "^3.3.3",
+    "postcss-font-magician": "^1.4.0",
+    "postcss-loader": "^0.9.1",
+    "precss": "^1.4.0",
     "react": "latest",
     "react-dom": "latest",
     "react-hot-loader": "^1.3.0",
@@ -32,6 +36,7 @@
     "axios": "^0.9.1",
     "js-cookie": "^2.1.1",
     "lodash": "^4.6.1",
+    "react-css-modules": "^3.7.8",
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^2.1.2",
     "react-redux": "^4.4.0",
